<resources>
    <string name="app_name">My Application</string>

    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="next">다음</string>
    <string name="join_toolbar_title">회원 정보를 입력해주세요</string>
    <string name="nick_name">닉네임</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="join_finish">회원가입 완료</string>
    <string name="hi">안녕하세요!</string>
    <string name="staff">싸피북스 사장님</string>
    <string name="qr_scan">QR 스캔</string>
    <string name="pickup_list">픽업 대기 목록</string>
    <string name="order_detail">주문상세</string>
    <string name="order_product">주문상품</string>
    <string name="order_info">결제정보</string>
    <string name="product_price">상품금액</string>

    <string name="order_list_title">%1$s 외 %2$d건</string>
    <string name="order_list_content">총 %1$d종 %2$d권 외 %3$s</string>

    <string name="order_detail_info">%1$s 주문 (주문번호 %2$d)</string>
    <string name="order_detail_price_quantity">%1$s\t\t%2$d개</string>

</resources>