<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_staff"
        app:layout_constraintStart_toStartOf="@id/tv_staff" />

    <TextView
        android:id="@+id/tv_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/staff"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/home_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_staff" />

    <View
        android:id="@+id/view_qr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/home_menu_bg"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_bottom" />

    <ImageView
        android:id="@+id/iv_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_qrcode"
        app:layout_constraintBottom_toTopOf="@+id/tv_qr"
        app:layout_constraintEnd_toEndOf="@id/view_qr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/view_qr"
        app:layout_constraintTop_toTopOf="@+id/view_qr" />

    <TextView
        android:id="@+id/tv_qr"
        style="@style/menuTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/qr_scan"
        app:layout_constraintBottom_toBottomOf="@+id/view_qr"
        app:layout_constraintEnd_toEndOf="@id/view_qr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/view_qr"
        app:layout_constraintTop_toBottomOf="@+id/iv_qr" />

    <View
        android:id="@+id/view_pickup_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/home_menu_bg"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_qr" />

    <ImageView
        android:id="@+id/iv_pickup_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_pickup_list"
        app:layout_constraintBottom_toTopOf="@+id/tv_pickup_list"
        app:layout_constraintEnd_toEndOf="@id/view_pickup_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/view_pickup_list"
        app:layout_constraintTop_toTopOf="@+id/view_pickup_list" />

    <TextView
        android:id="@+id/tv_pickup_list"
        style="@style/menuTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/qr_scan"
        app:layout_constraintBottom_toBottomOf="@+id/view_pickup_list"
        app:layout_constraintEnd_toEndOf="@id/view_pickup_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/view_pickup_list"
        app:layout_constraintTop_toBottomOf="@+id/iv_pickup_list" />

</androidx.constraintlayout.widget.ConstraintLayout>